Pattern parser completed

--- a/TypeCheckerGenerator/latex/Parser.tex
+++ b/TypeCheckerGenerator/latex/Parser.tex
@@ -1,4 +1,4 @@
-\section{Parsing from Files}
+\section{Parsers}
 
 \hide{
 \begin{code}%
@@ -7,3 +7,1140 @@
 \AgdaKeyword{where}\<%
 \end{code}
 }
+
+\hide{
+\begin{code}%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.String}%
+\>[4I]\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{String}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaPrimitive{toList}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaPrimitive{fromList}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{fromChar}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{length}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[4I]%
+\>[24]\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}==\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{to}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}==ˢ\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Char}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}==\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaPrimitive{isDigit}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaPrimitive{show}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Bool}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{if\AgdaUnderscore{}then\AgdaUnderscore{}else\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Nat}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{ℕ}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}<ᵇ\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{String}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{trim←}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{toNat}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Product}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Sum}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{inj₁}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{inj₂}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}⊎\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Maybe}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Maybe}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}<∣>\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{maybe′}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Unit}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaRecord{⊤}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{tt}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.List}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{List}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{foldr}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Function}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘′\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Category.Monad.State}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Maybe.Categorical}\AgdaSpace{}%
+\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{monad}\AgdaSpace{}%
+\AgdaSymbol{to}\AgdaSpace{}%
+\AgdaFunction{MaybeMonad}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Category.Monad}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{RawMonad}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Level}\<%
+\\
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{maybemonad}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaModule{RawMonad}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{f}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{0ℓ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaFunction{MaybeMonad}\<%
+\end{code}
+}
+
+\hide{
+\begin{code}%
+\>[0]\AgdaKeyword{private}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{variable}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{C}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\end{code}
+}
+
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Parser}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaFunction{Parser'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[2]\AgdaFunction{Parser'}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{StateT}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaPostulate{Char}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaDatatype{Maybe}\<%
+\\
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[2]\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{StateT}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
+\AgdaDatatype{Maybe}\<%
+\\
+\>[0]\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaFunction{→[\AgdaUnderscore{}]→}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser'}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaFunction{→[}}\AgdaSpace{}%
+\AgdaBound{P'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]→}}%
+\>[12]\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[127I]\AgdaKeyword{do}\<%
+\\
+\>[127I][@{}l@{\AgdaIndent{0}}]%
+\>[20]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{P'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘′}}\AgdaSpace{}%
+\AgdaPrimitive{toList}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+%
+\>[20]\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaPrimitive{fromList}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSymbol{))}\<%
+\\
+\>[.][@{}l@{}]\<[127I]%
+\>[18]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{maybemonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{ParserMonad}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{StateTMonad}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
+\AgdaFunction{MaybeMonad}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Parser}\<%
+\\
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{parsermonad}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaModule{RawMonad}\AgdaSpace{}%
+\AgdaFunction{ParserMonad}\<%
+\end{code}
+
+
+
+
+
+Useful common parsers:
+
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Parsers}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaFunction{fail}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{fail}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaComment{-- guarantees a parser, if it succeeds, consumes some input}\<%
+\\
+%
+\>[2]\AgdaFunction{safe}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{safe}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[167I]\AgdaKeyword{do}\<%
+\\
+\>[167I][@{}l@{\AgdaIndent{0}}]%
+\>[15]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{s'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{s}\<%
+\\
+%
+\>[15]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
+\AgdaFunction{length}\AgdaSpace{}%
+\AgdaBound{s'}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{<ᵇ}}\AgdaSpace{}%
+\AgdaFunction{length}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{s'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+\>[.][@{}l@{}]\<[167I]%
+\>[13]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{maybemonad}\<%
+\\
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{peak}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{Char}\<%
+\\
+%
+\>[2]\AgdaFunction{peak}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaPrimitive{toList}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}%
+\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaPrimitive{fromList}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSymbol{)))}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{all}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+%
+\>[2]\AgdaFunction{all}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaString{""}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{try}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{try}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{<∣>}}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}or\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊎}}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaSymbol{(}\AgdaBound{pa}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{or}}\AgdaSpace{}%
+\AgdaBound{pb}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{<\$>}}\AgdaSpace{}%
+\AgdaBound{pa}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{<∣>}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{<\$>}}\AgdaSpace{}%
+\AgdaBound{pb}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaOperator{\AgdaFunction{either\AgdaUnderscore{}or\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{either}}\AgdaSpace{}%
+\AgdaBound{pa}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{or}}\AgdaSpace{}%
+\AgdaBound{pb}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{maybe′}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{pb}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{pa}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaOperator{\AgdaFunction{ifp\AgdaUnderscore{}then\AgdaUnderscore{}else\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{B}\<%
+\\
+%
+\>[2]\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{ifp}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaBound{pthen}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaBound{pelse}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{pelse}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{x}%
+\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{pthen}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{nout}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaRecord{⊤}\<%
+\\
+%
+\>[2]\AgdaFunction{nout}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaInductiveConstructor{tt}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{optional}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊎}}\AgdaSpace{}%
+\AgdaRecord{⊤}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaFunction{optional}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}or}}\AgdaSpace{}%
+\AgdaFunction{nout}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{takeIf'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser'}\AgdaSpace{}%
+\AgdaPostulate{Char}\<%
+\\
+%
+\>[2]\AgdaFunction{takeIf'}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}%
+\>[24]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\>[2]\AgdaFunction{takeIf'}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{chars}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{chars}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{takeIf}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{Char}\<%
+\\
+%
+\>[2]\AgdaFunction{takeIf}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{→[}}\AgdaSpace{}%
+\AgdaFunction{takeIf'}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]→}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaComment{-- This terminates as we ensure to make p 'safe' before we}\<%
+\\
+%
+\>[2]\AgdaComment{-- use it, forcing the parser to fail if it does not consume}\<%
+\\
+%
+\>[2]\AgdaComment{-- any input}\<%
+\\
+%
+\>[2]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{TERMINATING}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}*[\AgdaUnderscore{},\AgdaUnderscore{}]}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{B}\<%
+\\
+%
+\>[2]\AgdaBound{p}%
+\>[388I]\AgdaOperator{\AgdaFunction{*[}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[394I]\AgdaKeyword{do}\<%
+\\
+\>[394I][@{}l@{\AgdaIndent{0}}]%
+\>[19]\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{optional}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{safe}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\<%
+\\
+\>[19][@{}l@{\AgdaIndent{0}}]%
+\>[21]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{b}\<%
+\\
+%
+\>[19]\AgdaBound{b}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{*[}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\<%
+\\
+%
+\>[19]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[388I]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⁺[\AgdaUnderscore{},\AgdaUnderscore{}]}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaGeneralizable{B}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{B}\<%
+\\
+%
+\>[2]\AgdaBound{p}%
+\>[431I]\AgdaOperator{\AgdaFunction{⁺[}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{pure}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊛}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊛}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{*[}}\AgdaSpace{}%
+\AgdaBound{f}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[431I]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{anyof}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{anyof}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}%
+\>[17]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{fail}\<%
+\\
+%
+\>[2]\AgdaFunction{anyof}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{ps}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{either}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{or}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{anyof}\AgdaSpace{}%
+\AgdaBound{ps}\AgdaSymbol{)}\<%
+\end{code}
+
+\begin{code}%
+%
+\>[2]\AgdaComment{-- text/number parsing}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{whitespace}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaRecord{⊤}\<%
+\\
+%
+\>[2]\AgdaFunction{whitespace}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{tt}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaFunction{trim←}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{ws-tolerant}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{ws-tolerant}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[486I]\AgdaKeyword{do}\<%
+\\
+\>[486I][@{}l@{\AgdaIndent{0}}]%
+\>[20]\AgdaFunction{whitespace}\<%
+\\
+%
+\>[20]\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[20]\AgdaFunction{whitespace}\<%
+\\
+%
+\>[20]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{r}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{literal'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser'}\AgdaSpace{}%
+\AgdaPostulate{Char}\<%
+\\
+%
+\>[2]\AgdaFunction{literal'}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\>[2]\AgdaFunction{literal'}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSymbol{)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{==}}\AgdaSpace{}%
+\AgdaBound{x}%
+\>[509I]\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[509I]%
+\>[16]\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{Char}\<%
+\\
+%
+\>[2]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{→[}}\AgdaSpace{}%
+\AgdaFunction{literal'}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]→}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{newline}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{'\textbackslash{}n'}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{nextChar'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser'}\AgdaSpace{}%
+\AgdaPostulate{Char}\<%
+\\
+%
+\>[2]\AgdaFunction{nextChar'}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}%
+\>[24]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\>[2]\AgdaFunction{nextChar'}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{chars}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{chars}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{nextChar}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{→[}}\AgdaSpace{}%
+\AgdaFunction{nextChar'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]→}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{literalAsString}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{fromChar}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{<\$>\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘′}}\AgdaSpace{}%
+\AgdaFunction{literal}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{string}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+%
+\>[2]\AgdaFunction{string}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[560I]\AgdaFunction{foldr}\<%
+\\
+\>[560I][@{}l@{\AgdaIndent{0}}]%
+\>[19]\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pure}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊛}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{literalAsString}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊛}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\<%
+\\
+%
+\>[19]\AgdaSymbol{(}\AgdaFunction{return}\AgdaSpace{}%
+\AgdaString{""}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPrimitive{toList}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{stringof}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+%
+\>[2]\AgdaFunction{stringof}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{takeIf}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{*[}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘′}}\AgdaSpace{}%
+\AgdaFunction{fromChar}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaString{""}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{nonempty}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+%
+\>[2]\AgdaFunction{nonempty}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[602I]\AgdaKeyword{do}\<%
+\\
+\>[602I][@{}l@{\AgdaIndent{0}}]%
+\>[17]\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[17]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{==ˢ}}\AgdaSpace{}%
+\AgdaString{""}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{r}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{nat}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
+\\
+%
+\>[2]\AgdaFunction{nat}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[622I]\AgdaKeyword{do}\<%
+\\
+\>[622I][@{}l@{\AgdaIndent{0}}]%
+\>[10]\AgdaBound{d}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{nonempty}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{stringof}\AgdaSpace{}%
+\AgdaPrimitive{isDigit}\AgdaSymbol{)}\<%
+\\
+%
+\>[10]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toNat}\AgdaSpace{}%
+\AgdaBound{d}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[622I]%
+\>[8]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\<%
+\\
+%
+\>[2]\AgdaFunction{bracketed}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{bracketed}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[639I]\AgdaKeyword{do}\<%
+\\
+\>[639I][@{}l@{\AgdaIndent{0}}]%
+\>[18]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{'('}\<%
+\\
+%
+\>[18]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{ws-tolerant}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[18]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{')'}\<%
+\\
+%
+\>[18]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{a}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Parsers}\<%
+\end{code}
